add user schema

--- a/notes/08-13-2017.md
+++ b/notes/08-13-2017.md
@@ -1,1 +1,21 @@
 #08/13/2017
+
+## User Schema
+
+Column | Type
+------ | ----
+ID | Int(7) PK, AI, Unique
+name | Varchar(100)
+email | Varchar(100), Unique
+username | Varchar(100), Unique
+password | Varchar(256), Unique
+role | Varchar(100)
+city | Varchar(50)
+state | Char(2)
+globalRank | Int(7)
+nationalRank | Int(7)
+stateRank | Int(7)
+localRank | Int(7)
+twitter | Varchar(100)
+facebook | Varchar(100)
+website | Varchar(100)
