add more schema, fxn to getBracketSize

--- a/notes/08-13-2017.md
+++ b/notes/08-13-2017.md
@@ -4,7 +4,7 @@
 
 Column | Type
 ------ | ----
-ID | Int(7) PK, AI, Unique
+ID | Int(7) PK, AI, Unique, Unsigned
 name | Varchar(100)
 email | Varchar(100), Unique
 username | Varchar(100), Unique
@@ -12,10 +12,82 @@ password | Varchar(256), Unique
 role | Varchar(100)
 city | Varchar(50)
 state | Char(2)
-globalRank | Int(7)
-nationalRank | Int(7)
-stateRank | Int(7)
-localRank | Int(7)
+mobile | Int(11)
+mobileCarrier | Varchar(25)
+rating | Varchar(50) (rookie, amateur, etc)
+points | Int(15), Unsigned
+globalRank | Int(7), Unsigned
+nationalRank | Int(7), Unsigned
+stateRank | Int(7), Unsigned
+localRank | Int(7), Unsigned
 twitter | Varchar(100)
 facebook | Varchar(100)
 website | Varchar(100)
+
+## Match Schema
+
+Column | Type
+------ | ----
+ID | Int(15), PK, AI, Unique, Unsigned
+tournamentID | Int(10), FK
+startTime | Int(13)
+isOpen | TinyInt(1), Unsigned?
+tableNumber | Int(3)
+streamURL | Varchar(100)
+a1 | Int(10), FK
+a2 | Int(10), FK
+b1 | Int(10), FK
+b2 | Int(10), FK
+
+## Match Results Schema
+
+Column | Type
+------ | ----
+matchID | Int(15), FK, Unique, Unsigned
+tournamentID | Int(10), FK, Unsigned
+w1 | Int(10), FK
+w2 | Int(10), FK
+l1 | Int(10), FK
+l2 | Int(10), FK
+w1StartPoints | Int(15), Unsigned
+w2StartPoints | Int(15), Unsigned
+l1StartPoints | Int(15), Unsigned
+l2StartPoints | Int(15), Unsigned
+w1AdjustedPoints | Int(3), Unsigned
+w2AdjustedPoints | Int(3), Unsigned
+l1AdjustedPoints | Int(3), Signed
+l2AdjustedPoints | Int(3), Signed
+
+## Recall Schema
+
+Column | Type
+------ | ----
+matchID | Int(15), FK, Unsigned
+p1 | Int(7), FK, Unsigned
+p2 | Int(7), FK, Unsigned
+p3 | Int(7), FK, Unsigned
+p4 | Int(7), FK, Unsigned
+p1LastRecall | Int(13), Unsigned
+p1NumRecalls | Int(1), Unsigned
+p2LastRecall | Int(13), Unsigned
+p2NumRecalls | Int(1), Unsigned
+p3LastRecall | Int(13), Unsigned
+p3NumRecalls | Int(1), Unsigned
+p4LastRecall | Int(13), Unsigned
+p4NumRecalls | Int(1), Unsigned
+
+## Tournament Schema
+
+
+## Thoughts
+
+Initial bracket size should be a square of 2. IE. 2, 4, 8, 16, 32, etc.
+
+```js
+function getBracketSize(numPlayers){
+    for(let exp = 1; ;exp++){
+        if(Math.pow(2, exp) >= numPlayers) return Math.pow(2, exp);
+    }
+
+}
+```
