--- a/notes/20170813.md
+++ b/notes/20170813.md
@@ -85,9 +85,9 @@ Initial bracket size should be a square of 2. IE. 2, 4, 8, 16, 32, etc.
 
 ```js
 function getBracketSize(numPlayers){
+    // Loop over whole numbered powers of 2 until 2^n >= numPlayers
     for(let exp = 1; ;exp++){
         if(Math.pow(2, exp) >= numPlayers) return Math.pow(2, exp);
     }
-
 }
 ```
